# Gaja-alert

./: .env.example  .gitignore  README.md  arm_server.py  pyproject.toml  sarvam_agent.py  sarvam_workflow.py  webcam_inference.py  yolo26n-seg_qnn.onnx
docs/: LOCAL_INFERENCE.md
export_assets/yolo26_seg-precompiled_qnn_onnx-float-qualcomm_snapdragon_x_elite/: metadata.json  yolo26_seg.onnx
export_assets/yolo26_seg-qnn_context_binary-float-qualcomm_snapdragon_x_elite/: metadata.json
gaja/: __init__.py  audio_trigger.py  config.py  dashboard.py  incidents.py  llm.py  pipeline.py  tool_protocol.py
scripts/: download-models.ps1  send_test_audio.py  serve-llm.ps1  serve-qwen-npu.ps1  serve_e2b_npu.py  serve_e2b_split.py  serve_qwen_npu.py  setup-qwen-npu.ps1  setup.ps1  test_inference.py  test_qwen_npu.py  test_split_inference.py  test_trigger.py
tests/: test_tool_protocol.py
web/: index.html
yolo26n_ncnn_model/: metadata.yaml  model.ncnn.param
